@@ -94,7 +94,7 @@
 )#enddef
 
 [window_definition]
-	id = "message_test_left"
+	id = "wml_message_left"
 	description = "bar"
 
 	[resolution]
@@ -129,7 +129,7 @@
 [/window_definition]
 
 [window_definition]
-	id = "message_test_right"
+	id = "wml_message_right"
 	description = "bar"
 
 	[resolution]
@@ -227,7 +227,7 @@
 		window_width = {WIDTH}
 		window_height = {HEIGHT}
 
-		definition = "message_test_left"
+		definition = "wml_message_left"
 
 		automatic_placement = "false"
 
@@ -309,14 +309,14 @@
 
 
 [window]
-	id = "message_test_left"
-	description = "Test dialog to test Jetryl's new message style and Kitty's portraits."
+	id = "wml_message_left"
+	description = "Dialog showing a unit portrait on the left side"
 
 	[resolution]
 		window_width = 0
 		window_height = 0
 
-		definition = "message_test_left"
+		definition = "wml_message_left"
 
 		automatic_placement = "false"
 
@@ -362,16 +362,66 @@
 											[/column]
 
 											[column]
-												grow_factor = 1
 												horizontal_grow = "true"
 
-												border = "all"
-												border_size = 5
+												[grid]
 
-												[scroll_label]
-													id = "message"
-													definition = "default"
-												[/scroll_label]
+													[row]
+														
+														[column]
+															border = "all"
+															border_size = 5
+															horizontal_alignment = "left"
+
+															[label]
+																id = "title"
+																definition = "title"
+															[/label]
+
+														[/column]
+
+													[/row]
+
+													[row]
+
+														[column]
+															grow_factor = 1
+															horizontal_grow = "true"
+
+															border = "all"
+															border_size = 5
+
+															[scroll_label] # NOTE maybe change the code to use message instead of label as id
+																id = "label"
+																definition = "default"
+															[/scroll_label]
+
+														[/column]
+
+													[/row]
+
+													[row]
+
+														[column]
+															border = "all"
+															border_size = 5
+															horizontal_alignment = "center"
+
+															[button]
+																# This button will be shown or hidden depending on the
+																# whether or not a scrollbar is needed to show the
+																# text.
+																id = "ok"
+																definition = "default"
+
+																label = "close"
+															[/button]
+
+														[/column]
+
+													[/row]
+
+												[/grid]
 
 											[/column]
 
@@ -404,7 +454,7 @@
 		window_width = {WIDTH}
 		window_height = {HEIGHT}
 
-		definition = "message_test_right"
+		definition = "wml_message_right"
 
 		automatic_placement = "false"
 
@@ -485,7 +535,7 @@
 #enddef
 
 [window]
-	id = "message_test_right"
+	id = "wml_message_right"
 	description = "Test dialog to test Jetryl's new message style and Kitty's portraits."
 	{RESOLUTION_RIGHT 1000 700 250}
 	{RESOLUTION_RIGHT 0 0 500}
