@@ -12,6 +12,7 @@ src/gui/dialogs/mp_connect.cpp
 src/gui/dialogs/mp_create_game.cpp
 src/gui/dialogs/mp_method_selection.cpp
 src/gui/dialogs/title_screen.cpp
+src/gui/dialogs/wml_message.cpp
 src/gui/widgets/button.cpp
 src/gui/widgets/canvas.cpp
 src/gui/widgets/control.cpp
