@@ -214,6 +214,7 @@ wesnoth_sources = Split("""
     gui/dialogs/mp_create_game.cpp
     gui/dialogs/mp_method_selection.cpp
     gui/dialogs/title_screen.cpp
+    gui/dialogs/wml_message.cpp
     gui/widgets/button.cpp
     gui/widgets/canvas.cpp
     gui/widgets/control.cpp
