@@ -16,6 +16,8 @@ Version 1.5.6+svn:
    * Tweaked the algorithm that extends the darkened area below long
      story texts so that it gives a more consistent appearance.
    * Added a border and blurring to story screens' text blocks.
+   * Improved wrapping in the new widgets.
+   * Improved easy close handling.
 
 Version 1.5.6:
  * Authoring tools:
